Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\".titl # 'Art Vandelay'"
    ]
   },
   {
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "(\"Ceo\".uppercase # 'CEO'"
+    "\"Ceo\".uppercase # 'CEO'"
    ]
   },
   {
