--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art vandelay'"
+       "<function str.title>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art vandelay\".titl # 'Art Vandelay'"
+    "\"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
