Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,8 @@
     }
    ],
    "source": [
-    "a = \"Ceo\" # 'CEO'\n",
-    "a.uppercase()"
+    "name = \"Ceo\" # 'CEO'\n",
+    "na.uppercase()"
    ]
   },
   {
