Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "\"art vandelay\".title # 'Art Vandelay'"
+    "a = \"art vandelay\"\n",
+    "a.title # 'Art Vandelay'"
    ]
   },
   {
