Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "<function str.title>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "name =\"Ceo\" # 'CEO'\n",
+    "name =\"Ceo\"\n",
     "name.uppercase()"
    ]
   },
