Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "a = \"art vandelay\"\n",
+    " \"art vandelay\"\n",
     "a.title # 'Art Vandelay'"
    ]
   },
