--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,13 @@
        "<function str.title>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " \"art vandelay\"\n",
-    "a.title # 'Art Vandelay'"
+    "\"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
