--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "name = \"art vandelay\".title # 'Art Vandelay'"
+    "name = \"art vandelay\"\n",
+    ".title # 'Art Vandelay'"
    ]
   },
   {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +186,13 @@
        "'CEO'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name =\"Ceo\"\n",
+    "name = \"Ceo\"\n",
     "name.upper()"
    ]
   },
