--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,14 @@
        "<function str.title>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = \"art vandelay\"\n",
-    ".title # 'Art Vandelay'"
+    "name.title # 'Art Vandelay'"
    ]
   },
   {
