Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<method 'title' of 'str' objects>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = \"art vandelay\"\n",
-    "str.title # 'Art Vandelay'"
+    "name = \"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
