Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"art vandelay\".title # 'Art Vandelay'"
+    "name.t = \"art vandelay\".title"
    ]
   },
   {
