Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,16 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    " I know you don't wanna hear the truth\n",
+    " We can argue for days whether it's faster to drop five shots\n",
+    " You don't wanna see the truth pissed off\n",
+    " And I know the only way so hit me when you feel lost\n",
+    " So fed up with racism today\n",
+    " I re-up ever week quick so it's needless to say\n",
+    " You not the truth son we the realest reppin' Houston\n",
+    " Those influenced under the influence"
+   ]
   },
   {
    "cell_type": "markdown",
