--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -239,16 +239,16 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.comwww.'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'vandelay.com'  # 'www.vandelay.com'"
+    "'www.'+'vandelay.com'  # 'www.vandelay.com'"
    ]
   },
   {
